--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.1'
+    compile 'com.github.lzyzsd:jsbridge:1.0.4'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
