--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:allowBackup="true"
         android:name=".utils.TheApplication"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true"
+        android:icon="@drawable/launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -20,9 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".activities.NativeMainActivity">
         </activity>
         <activity android:name=".activities.WebMainActivity">
+        </activity>
+        <activity android:name=".activities.JumpWebShow"/>
+        <activity android:name=".activities.SSBTActivity"/>
+        <activity android:name=".activities.LTBTActivity"/>
+        <activity android:name=".activities.DCKJActivity"/>
+        <activity android:name=".activities.SettingActivity">
         </activity>
     </application>
 
